<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <!-- General -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5pt"
        android:layout_marginStart="5pt"
        android:text="@string/settings_general"
        android:textColor="@color/colorGrey" />

    <!-- Clear Saves -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_clear_saves"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_margin="5pt"
            android:textAllCaps="false"
            android:text="@string/settings_clear_saves"
            android:background="@color/colorTransparent"/>

    </LinearLayout>

    <!-- Clear Categories -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_clear_categories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_margin="5pt"
            android:textAllCaps="false"
            android:text="@string/settings_clear_categories"
            android:background="@color/colorTransparent"/>

    </LinearLayout>

    <!-- Log out -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_log_out"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_margin="5pt"
            android:textAllCaps="false"
            android:text="@string/settings_log_out"
            android:background="@color/colorTransparent"/>

    </LinearLayout>

</LinearLayout>