<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <!-- Welcome the user -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <!-- Welcome text -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <!-- Welcome to Pinterest -->
            <TextView
                android:id="@+id/category_welcome_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/category_welcome_text"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="14pt"/>

            <!-- Pick 5 or more to get started -->
            <TextView
                android:id="@+id/category_choose_text"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:text="@string/category_choose_text"
                android:textColor="@color/colorBlack"
                android:textSize="12pt"/>

        </LinearLayout>

        <!-- Next button -->
        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/category_next_button"
            android:textAllCaps="false"
            android:layout_margin="1pt"/>

    </LinearLayout>

    <!-- Categories -->
    <GridView
        android:id="@+id/categories_grid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="175dp"
        android:horizontalSpacing="5dp"
        android:numColumns="3"
        android:verticalSpacing="5dp"
        android:padding="10dp"/>

</LinearLayout>